fixed timer text alignment

--- a/style.css
+++ b/style.css
@@ -38,9 +38,10 @@ body {
     font-size: 2.5rem;
     font-weight: bold;
     color: tomato;
+    text-align: center;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 750px) {
     html {
         font-size: 50%;
     }
